--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div id="flex-box-result"></div>
         </div>
         </div>
+        <h1>Hello World</h1>
         <script src="script.js"></script>
 </body>
 </html>
